--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<nav class="mainMenu">
 		<ul>
 			<li><a href="#speakers" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMSpeakers']);">ПРОГРАМА</a></li>
-			<li><a href="https://youtu.be/vNZkEkeMWWk" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMStream']);">ТРАНСЛЯЦІЯ</a></li>
+			<li class="btnStream"><a href="https://youtu.be/vNZkEkeMWWk" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMStream']);">ТРАНСЛЯЦІЯ</a></li>
 			<li><a href="https://t.me/TShapedConference" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMChat']);">ЧАТ</a></li>
 		</ul>
 	</nav>
