--- a/index.html
+++ b/index.html
@@ -210,16 +210,16 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic"></h3>
+								<h3 class="topic">Уроки выживания на командных встречах</h3>
 							</div>
 							<div class="description">
-								<p></p>
+								<p>Приглашаю поговорить о причинах, по которым после командных встреч возникает чувство потраченного времени и как это исправить. </p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Тетяна Третякова</h3>
 							</div>
 							<div class="info">
-								<p></p>
+								<p>Scrum Master в Namecheap</p>
 							</div>
 						</div>
 						<div class="time">12:55</div>
