--- a/index.html
+++ b/index.html
@@ -179,16 +179,18 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic"></h3>
+								<h3 class="topic">Выживание веб разработчика в машинном обучении</h3>
 							</div>
 							<div class="description">
-								<p></p>
+								<p>Итак, ты перешел из веба в машинное обучение.</p>
+								<p>Поговорим про неожиданные грабли, новые ограничения, ежедневную рутину и изменение мировосприятия.</p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Андрiй Сокирко</h3>
 							</div>
 							<div class="info">
-								<p></p>
+								<p>Последний год работаю в Namecheap в команде машинного обучения. Раньше - веб разработчик.</p>
+								<p>В свободное время тянет на rust, микроконтроллеры и мотоциклы.</p>
 							</div>
 						</div>
 						<div class="time">12:10</div>
@@ -216,7 +218,7 @@
 								<p>Приглашаю поговорить о причинах, по которым после командных встреч возникает чувство потраченного времени и как это исправить. </p>
 							</div>
 							<div class="blockUpper">
-								<h3 class="name">Тетяна Третякова</h3>
+								<h3 class="name">Тетяна Третьякова</h3>
 							</div>
 							<div class="info">
 								<p>Scrum Master в Namecheap</p>
