--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 								<h3 class="topic">Выживание веб разработчика в машинном обучении</h3>
 							</div>
 							<div class="description">
-								<p>Итак, ты перешел из веба в машинное обучение.</p>
+								<p>Итак, ты перешел из веба в Машинное обучение.</p>
 								<p>Поговорим про неожиданные грабли, новые ограничения, ежедневную рутину и изменение мировосприятия.</p>
 							</div>
 							<div class="blockUpper">
