--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">Выживание веб разработчика в машинном обучении</h3>
+								<h3 class="topic">Выживание веб-разработчика в Машинном обучении</h3>
 							</div>
 							<div class="description">
 								<p>Итак, ты перешел из веба в Машинное обучение.</p>
