--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
 					<div class="item" lang="ru">
 						<div class="dataAdditional">
-							<div class="photo"><img src="img/speakers/ninja.svg" alt="Скоро Анонсуємо" /></div>
+							<div class="photo"><img src="img/speakers/kopytina.png" alt="Ірина Копитіна" /></div>
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
@@ -270,10 +270,12 @@
 								<p></p>
 							</div>
 							<div class="blockUpper">
-								<h3 class="name">Скоро Анонсуємо</h3>
+								<h3 class="name">Ірина Копитіна</h3>
 							</div>
 							<div class="info">
-								<p></p>
+								<p>Практикующий психолог, коуч, корпоративный тренер, 10 лет успешной работы в HR.</p>
+								<p>В корпоративном секторе прошла карьерный путь от Learning & Development Specialist до Strategic People Business Partner в одной из крупнейших FMCG компаний мира (AB InBev).</p>
+								<p>На данный момент – HR Business & Learning Partner в Namecheap.</p>
 							</div>
 						</div>
 						<div class="time">14:15</div>
