--- a/index.html
+++ b/index.html
@@ -264,10 +264,12 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic"></h3>
+								<h3 class="topic">«Развиваться нельзя остановиться»: расставляем запятые в вашу пользу</h3>
 							</div>
 							<div class="description">
-								<p></p>
+								<p>Умение управлять собственным развитием давно уже превратилось в сверх-ценный навык, но что это значит? Как это сделать, если подчас нелегко бывает ответить на, казалось бы, простой вопрос: «Чего я хочу?». Откуда взять мотивацию к действиям?</p>
+								<p>Почему персональные планы развития зачастую оказываются бесполезными и лишь вызывают дополнительное раздражение?</p>
+								<p>Приходите в эфир, обсудим ответы на эти и другие вопросы о вашем развитии – реальном и продуктивном.</p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Ірина Копитіна</h3>
