--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">Docker для разработчиков.</h3>
+								<h3 class="topic">Docker для розробників.</h3>
 							</div>
 							<div class="description">
-								<p>Во время доклада мы поговорим о контейнеризации, чем она отличается от виртуализации, особенности файловой системы докера, мапинг портов, вольюмы и какая от этого польза разработчику.</p>
+								<p>Під час доповіді ми поговоримо про контейнеризацію, чим вона відрізняється від віртуалізації, особливості файлової системи докера, мапінг портів, вольюми і яка від цього користь розробнику.</p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Юрій Пучков</h3>
 							</div>
 							<div class="info">
-								<p>20 лет опыта в IT. В данный момент R&D Infrastructure Engineer в компании Namecheap.</p>
-								<p>Занимался разработкой в разных областях, от программирования микроконтроллеров на ассемблере и разработки кросс-плаформенных десктопных приложений до облачных решений. Как хобби, веду курс "Web-разработка на Python" по своей программе в "Компьютерной Академии ШАГ".</p>
+								<p>20 років досвіду в IT. В даний момент R&D Infrastructure Engineer в компанії Namecheap.</p>
+								<p>Займався розробкою в різних областях, від програмування мікроконтролерів на асемблері і розробки крос-плаформенних десктопних додатків до хмарних рішень. Як хобі, веду курс "Web-розробка на Python" по своїй програмі в "Комп'ютерній Академії ШАГ".</p>
 							</div>
 						</div>
 						<div class="time">10:50</div>
@@ -157,17 +157,17 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">Как деву перейти в Машинное обучение.</h3>
+								<h3 class="topic">Як деву перейти в Машинному навчанні.</h3>
 							</div>
 							<div class="description">
-								<p>Машинное обучение кажется очень многим такой классной, интересной и привлекательной областью. Как перейти в этот мир. Что надо знать и как не потерять в статусе и деньгах.</p>
+								<p>Машинне навчання здається дуже багатьом такою класною, цікавою і привабливою областю. Як перейти в цей світ. Що треба знати і як не загубитися в статусі і грошах.</p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Павло Галушко</h3>
 							</div>
 							<div class="info">
 								<p>Tech lead Machine Learning dev team at Namecheap</p>
-								<p>Программирую всю жизнь, за деньги уже больше 25 лет. Начинал с C. Через десяток языков и несколько разных сфер (от безопасности до веба через микроконтроллеры) пришёл к Python для машинного обучения. Не факт, что тут и останусь, но пока очень нравится.</p>
+								<p>Програмую все життя, за гроші вже більше 25 років. Починав з C. Через десяток мов і кілька різних сфер (від безпеки до інтернету через мікроконтролери) прийшов до Python для Машинного навчання. Не факт, що тут і залишуся, але поки дуже подобається.</p>
 							</div>
 						</div>
 						<div class="time">11:35</div>
@@ -179,18 +179,18 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">Выживание веб-разработчика в Машинном обучении</h3>
+								<h3 class="topic">Виживання веб-розробника в Машинному навчанні</h3>
 							</div>
 							<div class="description">
-								<p>Итак, ты перешел из веба в Машинное обучение.</p>
-								<p>Поговорим про неожиданные грабли, новые ограничения, ежедневную рутину и изменение мировосприятия.</p>
+								<p>Отже, ти перейшов з Інтернету в Машинне навчання.</p>
+								<p>Поговоримо про несподівані граблі, нові обмеження, щоденну рутину і зміну світосприйняття.</p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Андрiй Сокирко</h3>
 							</div>
 							<div class="info">
-								<p>Последний год работаю в Namecheap в команде машинного обучения. Раньше - веб разработчик.</p>
-								<p>В свободное время тянет на rust, микроконтроллеры и мотоциклы.</p>
+								<p>Останній рік працюю в Namecheap в команді Машинного навчання. Раніше - веб-розробник.</p>
+								<p>У вільний час тягне на rust, мікроконтролери та мотоцикли.</p>
 							</div>
 						</div>
 						<div class="time">12:10</div>
@@ -212,10 +212,10 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">Уроки выживания на командных встречах</h3>
+								<h3 class="topic">Уроки виживання на командних зустрічах</h3>
 							</div>
 							<div class="description">
-								<p>Приглашаю поговорить о причинах, по которым после командных встреч возникает чувство потраченного времени и как это исправить. </p>
+								<p>Запрошую поговорити про причини, за якими після командних зустрічей виникає почуття витраченого часу і як це виправити.</p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Тетяна Третьякова</h3>
@@ -233,16 +233,16 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">Коучинг как способ убрать баги из жизни</h3>
+								<h3 class="topic">Коучинг як спосіб прибрати баги з життя</h3>
 							</div>
 							<div class="description">
-								<p>Поговорим о том, как коучинг помогает обнаружить "баги" в вашей жизни, придать энергии, чтобы их пофиксить, а также позволяет "прокачать" свою осознанность.</p>
+								<p>Поговоримо про те, як коучинг допомагає виявити "баги" в вашому житті, надати енергії, щоб їх пофіксить, а також дозволяє "прокачати" свою усвідомленість.</p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Тетяна Коротич</h3>
 							</div>
 							<div class="info">
-								<p>Talent Business Partner в Namecheap, коуч. Люблю делиться знаниями и учиться новому. Обожаю организовывать выездные обучения и тимбилдинги. Ценю, когда сложные вещи объясняют простым языком.</p>
+								<p>Talent Business Partner в Namecheap, коуч. Люблю ділитися знаннями і вчитися новому. Обожнюю організовувати виїзні навчання і тімбілдинги. Ціную, коли складні речі пояснюють простою мовою.</p>
 							</div>
 						</div>
 						<div class="time">13:30</div>
@@ -264,20 +264,20 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">«Развиваться нельзя остановиться»: расставляем запятые в вашу пользу</h3>
+								<h3 class="topic">«Розвиватися не можна зупинитися»: розставляємо коми в вашу користь</h3>
 							</div>
 							<div class="description">
-								<p>Умение управлять собственным развитием давно уже превратилось в сверх-ценный навык, но что это значит? Как это сделать, если подчас нелегко бывает ответить на, казалось бы, простой вопрос: «Чего я хочу?». Откуда взять мотивацию к действиям?</p>
-								<p>Почему персональные планы развития зачастую оказываются бесполезными и лишь вызывают дополнительное раздражение?</p>
-								<p>Приходите в эфир, обсудим ответы на эти и другие вопросы о вашем развитии – реальном и продуктивном.</p>
+								<p>Вміння управляти власним розвитком давно вже перетворилося на дуже цінний навик, але що це означає? Як це зробити, якщо часом нелегко буває відповісти на, здавалося б, просте запитання: «Чого я хочу?». Звідки взяти мотивацію до дій?</p>
+								<p>Чому персональні плани розвитку часто виявляються марними і лише викликають додаткове роздратування?</p>
+								<p>Приходьте в ефір, обговоримо відповіді на ці та інші питання щодо вашого розвитку - реального і продуктивного.</p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Ірина Копитіна</h3>
 							</div>
 							<div class="info">
-								<p>Практикующий психолог, коуч, корпоративный тренер, 10 лет успешной работы в HR.</p>
-								<p>В корпоративном секторе прошла карьерный путь от Learning & Development Specialist до Strategic People Business Partner в одной из крупнейших FMCG компаний мира (AB InBev).</p>
-								<p>На данный момент – HR Business & Learning Partner в Namecheap.</p>
+								<p>Практикуючий психолог, коуч, корпоративний тренер, 10 років успішної роботи в HR.</p>
+								<p>У корпоративному секторі пройшла кар'єрний шлях від Learning & Development Specialist до Strategic People Business Partner в одній з найбільших FMCG компаній світу (AB InBev).</p>
+								<p>На даний момент - HR Business & Learning Partner в Namecheap.</p>
 							</div>
 						</div>
 						<div class="time">14:15</div>
@@ -297,7 +297,7 @@
 								<h3 class="topic">Maximizing Your Professional Value, from Junior to Leader</h3>
 							</div>
 							<div class="description">
-								<p>Стоит ли пытаться быть «в теме» всех современных технологий в отрасли? Или же стоит сосредоточиться на одной конкретной области и быть в этом экспертом?</p>
+								<p>Чи варто намагатися бути «в темі» всіх сучасних технологій в галузі? Або ж варто зосередитися на одній конкретній області і бути в цьому експертом?</p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Владлен Федосов</h3>
