chore: fix title

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">«Розвиватися не можна зупинитися»: розставляємо коми в вашу користь</h3>
+								<h3 class="topic">«Розвиватися не можна зупинитися»: розставляємо коми на вашу користь</h3>
 							</div>
 							<div class="description">
 								<p>Вміння управляти власним розвитком давно вже перетворилося на дуже цінний навик, але що це означає? Як це зробити, якщо часом нелегко буває відповісти на, здавалося б, просте запитання: «Чого я хочу?». Звідки взяти мотивацію до дій?</p>
