--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 	<!--**************** MAIN_MENU ****************-->
 	<nav class="mainMenu">
 		<ul>
-			<li><a href="#speakers" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMSpeakers']);">ПРОГРАМА</a></li>
+			<li><a href="https://app.sli.do/event/e3pfvzoe" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMSlido']);">Задати питання спікеру</a></li>
 			<li class="btnStream"><a href="https://youtu.be/vNZkEkeMWWk" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMStream']);">ТРАНСЛЯЦІЯ</a></li>
-			<li><a href="https://t.me/TShapedConference" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMChat']);">ЧАТ</a></li>
+			<li><a href="https://t.me/TShapedConference" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMChat']);">Telegram-канал</a></li>
 		</ul>
 	</nav>
 
