chore: sokirko desc

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 								<h3 class="topic">Виживання веб-розробника в Машинному навчанні</h3>
 							</div>
 							<div class="description">
-								<p>Отже, ти перейшов з Інтернету в Машинне навчання.</p>
+								<p>Отже, ти перейшов з веба в Машинне навчання.</p>
 								<p>Поговоримо про несподівані граблі, нові обмеження, щоденну рутину і зміну світосприйняття.</p>
 							</div>
 							<div class="blockUpper">
