chore: pasha topic fix

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">Як деву перейти в Машинному навчанні.</h3>
+								<h3 class="topic">Як деву перейти в Машинне навчання.</h3>
 							</div>
 							<div class="description">
 								<p>Машинне навчання здається дуже багатьом такою класною, цікавою і привабливою областю. Як перейти в цей світ. Що треба знати і як не загубитися в статусі і грошах.</p>
