--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">Micro-Frontends, the future is now. ILC(Isomorphic Layout Composer).</h3>
+								<h3 class="topic">Micro-Frontends, the future is now. ILC(Isomorphic Layout Composer)</h3>
 							</div>
 							<div class="description">
 								<p>Колись фронтенд був простим і легким, але за не великий період часу він дуже виріс, тому на сьогодні ми маємо багато фреймворків, бібліотек і зазвичай над проектами працює велика кількість людей. Наступний крок це - вирішення проблеми, як з цим всім жити. Тому ми з вами поговоримо про Micro-frontends - мікросервісний підхід на фронтенді. І я розповім про просте в використанні рішення, протестоване в продакшині з підтримкою SSR.</p>
@@ -125,7 +125,7 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">Docker для розробників.</h3>
+								<h3 class="topic">Docker для розробників</h3>
 							</div>
 							<div class="description">
 								<p>Під час доповіді ми поговоримо про контейнеризацію, чим вона відрізняється від віртуалізації, особливості файлової системи докера, мапінг портів, вольюми і яка від цього користь розробнику.</p>
@@ -157,10 +157,10 @@
 						</div>
 						<div class="dataMain">
 							<div class="blockUpper">
-								<h3 class="topic">Як деву перейти в Машинне навчання.</h3>
+								<h3 class="topic">Як деву перейти в Машинне навчання</h3>
 							</div>
 							<div class="description">
-								<p>Машинне навчання здається дуже багатьом такою класною, цікавою і привабливою областю. Як перейти в цей світ. Що треба знати і як не загубитися в статусі і грошах.</p>
+								<p>Машинне навчання здається дуже багатьом такою класною, цікавою і привабливою областю. Як перейти в цей світ, що потрібно знати і як не загубитися в статусі і грошах.</p>
 							</div>
 							<div class="blockUpper">
 								<h3 class="name">Павло Галушко</h3>
