--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 	<nav class="mainMenu">
 		<ul>
 			<li><a href="https://app.sli.do/event/e3pfvzoe" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMSlido']);">Задати питання спікеру</a></li>
-			<li class="btnStream"><a href="https://youtu.be/vNZkEkeMWWk" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMStream']);">ТРАНСЛЯЦІЯ</a></li>
+			<!--<li class="btnStream"><a href="https://youtu.be/vNZkEkeMWWk" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMStream']);">ТРАНСЛЯЦІЯ</a></li>-->
+			<li class="btnStream"><a href="https://www.youtube.com/watch?v=l3i_LVMFTAg&list=PLJ5NW5T60UpgIvt7x4xnUPscaqeKhpIN6" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMStream']);">Відео доповідей</a></li>
 			<li><a href="https://t.me/TShapedConference" target="_blank" onClick="_gaq.push(['_trackEvent', 'Btns', 'FixedMenu', 'FMChat']);">Telegram-канал</a></li>
 		</ul>
 	</nav>
